# YFaceSwap

./: CMakeLists.txt  DLib.props  DLib_d.props  Jni.props  OpenCV.props  OpenCV_d.props  UbuntuServerConfig.txt  YFaceSwap.sln  autorun_java.sh  install.sh  说明.txt
Java/src/: com_yfaceswap_FaceSwapLib.cpp  com_yfaceswap_FaceSwapLib.h  gen_jni_h.bat  run.sh
Java/src/com/yfaceswap/: Entry.java  FaceSwapLib.java
YFaceSwap/: YFaceSwap.vcxproj  YFaceSwap.vcxproj.filters  main.cpp
YFaceSwap/FaceSwap/: FaceDetector.cpp  FaceDetector.h  FaceDetectorAndTracker.cpp  FaceDetectorAndTracker.h  FaceExchanger.cpp  FaceExchanger.h  FaceSwapLib.cpp  FaceSwapLib.h  FaceSwapper.cpp
YFaceSwap/data/: AppConfig.ini
